--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -30,23 +30,23 @@ body {
 
 .result-card,
 .summary-card {
-  width: 300px;
-  height: 420px;
-  border-radius: 25px;
+  width: 18.75em;
+  height: 26.26em;
+  border-radius: 1.5625em;
 }
 
 .result-card {
   background: linear-gradient(var(--light-slate-blue), var(--light-royal-blue));
-  box-shadow: -10px 10px 12px 5px rgba(235, 241, 255, 0.75);
+  box-shadow: -0.625em 0.625em 0.75em 0.3125em rgba(235, 241, 255, 0.75);
   text-align: center;
-  padding: 30px 50px 50px 50px;
+  padding: 1.875em 3.125em 3.125em 3.125em;
 }
 
 .result-heading {
-  font-size: 20px;
+  font-size: 1.25em;
   font-weight: 700;
   color: var(--light-lavender);
-  margin-bottom: 30px;
+  margin-bottom: 1.875em;
 }
 
 .result-figure {
@@ -56,31 +56,31 @@ body {
   background: linear-gradient(var(--violet-blue), var(--persian-blue));
   border-radius: 100%;
   margin: auto;
-  width: 160px;
-  height: 160px;
+  width: 10em;
+  height: 10em;
   text-align: center;
 }
 
 .result {
   color: hsla(241, 100%, 89%, 0.712);
-  font-size: 14px;
+  font-size: 0.875em;
 }
 
 .result-number {
   display: block;
   color: var(--white);
   font-weight: 800;
-  font-size: 60px;
+  font-size: 3.75em;
 }
 
 .result-feedback-container {
-  margin-top: 30px;
+  margin-top: 1.875em;
 }
 
 .result-feedback {
   color: var(--white);
-  font-size: 25px;
-  margin-bottom: 15px;
+  font-size: 1.5625em;
+  margin-bottom: 0.625em;
 }
 
 .result-description {
@@ -88,34 +88,34 @@ body {
 }
 
 .summary-card {
-  box-shadow: 10px 10px 12px 5px rgba(235, 241, 255, 0.75);
-  padding: 30px;
+  box-shadow: 0.625em 0.625em 0.75em 0.3125em rgba(235, 241, 255, 0.75);
+  padding: 1.875em;
 }
 
 .summary-heading {
-  font-size: 20px;
-  margin-bottom: 20px;
+  font-size: 1.25em;
+  margin-bottom: 1.25em;
 }
 
 .summary-details {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 0.625em;
 }
 
 .summary-detail {
   display: flex;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 0.625em;
   display: flex;
-  width: 240px;
-  height: 50px;
-  margin-bottom: 15px;
-  padding: 15px;
+  width: 15em;
+  height: 3.125em;
+  margin-bottom: 0.9375em;
+  padding: 0.9375em;
 }
 
 .summary-name {
-  margin-left: 10px;
+  margin-left: 0.625em;
 }
 
 .summary-result {
@@ -129,7 +129,7 @@ body {
 .summary-result-number {
   color: var(--dark-gray-blue);
   font-weight: 800;
-  margin-right: 5px;
+  margin-right: 0.3125em;
 }
 
 .summary-reaction {
@@ -168,13 +168,13 @@ body {
   position: relative;
   background: var(--dark-gray-blue);
   border: none;
-  border-radius: 30px;
+  border-radius: 1.875em;
   color: var(--white);
   font-family: var(--font);
   font-weight: 800;
-  font-size: 16px;
-  width: 240px;
-  height: 50px;
+  font-size: 1em;
+  width: 15em;
+  height: 3.125em;
   overflow: hidden;
   cursor: pointer;
 }
@@ -213,12 +213,12 @@ body {
   }
 
   .result-card {
-    border-radius: 0 0 25px 25px;
+    border-radius: 0 0 1.5625em 1.5625em;
   }
 
   .summary-detail,
   .btn {
-    width: 315px;
+    width: 19.6875em;
   }
 }
 
